--- a/Week 9  HTML Practical/task10.html
+++ b/Week 9  HTML Practical/task10.html
@@ -1,13 +1,14 @@
 <h1>IT Fundamentals</h1>
 
 <ul>
-    <li>Tien Dat Ngo</li>
-    <li>48016</li>
-    <li>phatdzhp@gmail.com</li>
+    <li>Name: Tien Dat Ngo</li>
+    <li>Student ID: 48016</li>
+    <li>Email address: phatdzhp@gmail.com</li>
     <li>Program: Diploma of IT</li>
 </ul>
 
-<p><image scr="https://upload.wikimedia.org/wikipedia/commons/thumb/0/03/Kismet-IMG_6007-black.jpg/800px-Kismet-IMG_6007-black.jpg." border="0" align="left" height="100" width="125" />
+<p><image scr="https://upload.wikimedia.org/wikipedia/commons/thumb/0/03/Kismet-IMG_6007-black.jpg/800px-Kismet-IMG_6007-black.jpg." border="0" align="left" height="432" width="480" />
+
 <p><a href="https://commons.wikimedia.org/wiki/File:Kismet-IMG_6007-black.jpg.">Here's a link!</a></p>
 
 <table>
@@ -28,5 +29,9 @@
     </tbody>
 </table>
 
+<pre>
+    <code>def my_function():
+        print("Hello from a function")</code>
+</pre>
 
 
