--- a/Week 10- Java Script/Task 2.html
+++ b/Week 10- Java Script/Task 2.html
@@ -1,15 +1,15 @@
 <html>
-<head>
-  <title>Week 8</title>
-</head>
-<body>
-  <h1>JavaScript Demo</h1>
-  <a 
-    href="a"
-    onclick="document.getElementById('box').innerHTML = 'You clicked it!';"
-    >Click me</a
-  >
-  
-  <p id="box"></p>
-</body>
+    <head>
+        <title>week 10</title>
+    </head>
+    <body>
+        <h1>JavaScript Demo</h1>
+        <a
+          href="a"
+          onclick="document.getElementById('box').innerHTML = 'You clicked it!';"
+          >Click me</a
+        >
+
+        <p id="box"></p>
+    </body>
 </html>
