--- a/Week 10- Java Script/Task 2.html
+++ b/Week 10- Java Script/Task 2.html
@@ -5,10 +5,10 @@
     <body>
         <h1>JavaScript Demo</h1>
         <a
-          href="a"
+          href="#"
           onclick="document.getElementById('box').innerHTML = 'You clicked it!';"
-          >Click me</a
-        >
+          >Click me</a>
+        
 
         <p id="box"></p>
     </body>
