--- a/Week 10- Java Script/Task 3.html
+++ b/Week 10- Java Script/Task 3.html
@@ -5,10 +5,10 @@
     <body>
         <h1>JavaScript Demo</h1>
         <a
-          href="a"
+          href="#"
           onclick="document.getElementById('box').innerHTML = '<li>The link was pressed 1 times.</li>';"
-          >Click me</a
-        >
+          >Click me</a>
+        
 
         <p id="box"></p>
     </body>
