--- a/Week 10- Java Script/Task 6.html
+++ b/Week 10- Java Script/Task 6.html
@@ -5,10 +5,10 @@
     <script>
         counter = 0;
 
-        function countClicks() {
+        function countClicks(element) {
             counter = counter + 1;
             var output = 'The link was pressed ' + counter + ' times.';
-            var element = document.getElementById('boxy');
+            
             element.innerHTML = output;
         }
     </script>
@@ -16,7 +16,10 @@
 </head>
 <body>
     <h1>JavaScript Demo</h1>
-    <a href="#" onclick="countClicks();">Click me</a>
+    <a href="#" onclick="countClicks(this);">Click me</a>
     <p id="boxy"></p>
+</body>
+<body>
+    <img src="http://www.outgrabe.net/cat01.jpg" onmouseover="this.src='http://www.outgrabe.net/cat02.jpg'" onmouseover="this.src='http://www.outgrabe.net/cat01.jpg'"/>
 </body>
 </html>
