--- a/Week 10- Java Script/Task 6.html
+++ b/Week 10- Java Script/Task 6.html
@@ -20,6 +20,6 @@
     <p id="boxy"></p>
 </body>
 <body>
-    <img src="http://www.outgrabe.net/cat01.jpg" onmouseover="this.src='http://www.outgrabe.net/cat02.jpg'" onmouseover="this.src='http://www.outgrabe.net/cat01.jpg'"/>
+    <img src="http://www.outgrabe.net/cat01.jpg" onmouseover="this.src='http://www.outgrabe.net/cat02.jpg'" onmouseout="this.src='http://www.outgrabe.net/cat01.jpg'"/>
 </body>
 </html>
