--- a/Tien_Dat_Ngo_Assignment 3/asg3.html
+++ b/Tien_Dat_Ngo_Assignment 3/asg3.html
@@ -28,3 +28,23 @@
 </body>
 
 </html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="color.css">
+    <title>Software Engineer Theme</title>
+</head>
+<body>
+    <header>
+        <h1>Software Engineer Page</h1>
+    </header>
+    <button onclick="toggleTheme()">Toggle Theme</button>
+
+    <script src="asg3.js"></script>
+</body>
+</html>
+
+
