--- a/Tien_Dat_Ngo_Assignment 3/asg3.html
+++ b/Tien_Dat_Ngo_Assignment 3/asg3.html
@@ -47,4 +47,27 @@
 </body>
 </html>
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Welcome Software Engineer</title>
+    <link rel="stylesheet" href="color.css">
+    <script src="asg3.js" defer></script>
+</head>
+<body onload="updateHeading()" data-theme="light">
+    <header>
+        <h1 id="greeting">Hello, Software Engineer</h1>
+    </header>
+    <form id="nameForm">
+        <label for="userName">Enter your name: </label>
+        <input type="text" id="userName" name="user" placeholder="Your Name" value="Tien Dat Ngo">
+        <button type="submit">Submit</button>
+    </form>
+</body>
+</html>
+
+
+
 
