--- a/week11/Task1-5.html
+++ b/week11/Task1-5.html
@@ -21,7 +21,9 @@
   p:first-of-type {
   font: 0.17em/1.33 Verdana, sans-serif;
 }
-
+p + p {text-indent: 5em;}
+  /* this selects p tags preceded by a p tag --
+     that is, not the first p tag */
 
 </style>
 </head>
