--- a/Tien_Dat_Ngo_Assignment 3/asg3.html
+++ b/Tien_Dat_Ngo_Assignment 3/asg3.html
@@ -1,5 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Web Page</title>
+</head>
+<body>
+    <div id="datetime"></div>
+
+    <!-- Your other HTML content goes here -->
+
+    <script src="asg3.js"></script>
+</body>
+</html>
+
+
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -62,7 +79,7 @@
     </header>
     <form id="nameForm">
         <label for="userName">Enter your name: </label>
-        <input type="text" id="userName" name="user" placeholder="Your Name" value="Tien Dat Ngo">
+        <input type="text" id="userName" name="user" placeholder="Your Name" 
         <button type="submit">Submit</button>
     </form>
 </body>
