--- a/Tien_Dat_Ngo_Assignment 3/asg3.html
+++ b/Tien_Dat_Ngo_Assignment 3/asg3.html
@@ -11,9 +11,9 @@
     <!-- Your other HTML content goes here -->
 
     <script src="asg3.js"></script>
+    <h1>Welcome to My Web Page</h1>
 </body>
 </html>
-
 
 <!DOCTYPE html>
 <html lang="en">
@@ -67,6 +67,56 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Software Engineer Portfolio</title>
+</head>
+<body>
+
+  
+  
+  <section>
+    <h2>About My Assginment 2</h2>
+    <p>
+      For the previous assignment, I wrote a report related to the topic of
+      software engineer. For this assignment, I will create a web page about this topic.
+    </p>
+  </section>
+
+  <section>
+    <h2>Systems</h2>
+    <p>
+      Here are some of systems about software engineer:
+    </p>
+    <ul>
+      <li>
+         Every system has specific goals
+      </li>
+      <li>
+         Every system has subsystems
+      </li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>The foundations of software engineering:</h2>
+    <p>
+        Software engineering is built on the foundations of several other industries:
+    </p>
+    <ul>
+      <li>Computer Science</li>
+      <li>Management Science</li>
+      <li>Economics</li>
+      <li>System Engineering</li>
+    </ul>
+  </section>
+</body>
+</html>
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome Software Engineer</title>
@@ -80,7 +130,7 @@
     <form id="nameForm">
         <label for="userName">Enter your name: </label>
         <input type="text" id="userName" name="user" placeholder="Your Name" 
-        <button type="submit">Submit</button>
+        <button onclick="submitForm()">Submit</button>
     </form>
 </body>
 </html>
