--- a/Tien_Dat_Ngo_Assignment 3/asg3.html
+++ b/Tien_Dat_Ngo_Assignment 3/asg3.html
@@ -130,7 +130,7 @@
     <form action="/submit" method="get">
       <label for="userName">Enter your name:</label>
       <input type="text" id="userName" name="name">
-      <button type="submit">Submit</button>
+      <button type="button" onclick="submitForm()">Submit</button>
   </form>
 </body>
 </html>
